Refactor achievements endpoints for clearer API structure
Co-authored-by: tomassirio <19593836+tomassirio@users.noreply.github.com>